harbor-config/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: harbor-gateway
  namespace: harbor
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - registry.gwg313.xyz
      tls:
        mode: SIMPLE
        credentialName: harbor-cert
